fix(pages/index): fix horizontal scrollbar on desktop

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -98,6 +98,41 @@
   grid-area: contact;
 }
 
+.partnerImages {
+  width: 80vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5vh;
+  grid-template-areas: 'oldSlo brandmakers';
+  padding: 0% 0% 3%;
+}
+
+@media all and (min-width: 839px) {
+  .partnerImages {
+    grid-template-columns: 15% 15%;
+    grid-template-rows: 5vh;
+    grid-template-areas: 'oldSlo brandmakers';
+  }
+}
+
+.oldLink {
+  grid-area: oldSlo;
+}
+
+.oldSlo {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.brandLink {
+  grid-area: brandmakers;
+}
+
+.brandmakers {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .h1 {
   display: none;
 }
